--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,19 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <% flash.each do |name, msg| %>
+  <div class= "<%=name%>-flash">
+    <p><%= msg %></p>
+  </div>
+  <% end %>
+
   <body>
     <nav class = "topnav">
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
+      <%= link_to "Register", "/register" %>
     </nav>
-    <% flash.each do |name, msg| %>
-      <div class= "<%=name%>-flash">
-        <p><%= msg %></p>
-      </div>
-    <% end %>
     <%= yield %>
   </body>
 </html>
