Adds params to partial-render locals for new form auto complete

--- a/app/views/register/new.html.erb
+++ b/app/views/register/new.html.erb
@@ -3,4 +3,4 @@
 <%= render partial: 'form', locals: { path: "/register",
                                       method: :post,
                                       button_name: "Submit",
-                                      user: @user } %>
+                                      user: params } %>
