Update MVC to not require confirm_pass

--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -16,13 +16,13 @@
   <%= text_field_tag :zip, user[:zip]%>
 
   <%= label_tag :email %>
-  <%= text_field_tag :email, user[:email] %>
+  <%= text_field_tag :email %>
 
   <%= label_tag :password %>
-  <%= text_field_tag :password, user[:password] %>
+  <%= text_field_tag :password %>
 
   <%= label_tag :confirm_pass %>
-  <%= text_field_tag :confirm_pass, user[:confirm_pass] %>
+  <%= text_field_tag :confirm_pass %>
 
   <%= submit_tag button_name %>
 <% end %>
