--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,30 +16,30 @@
 
   <body>
     <nav class = "topnav">
-      <%= link_to "Home", "/" %>
-      <%= link_to "All Merchants", "/merchants"%>
-      <%= link_to "All Items", "/items"%>
+        <%= link_to "Home", "/" %>
+        <%= link_to "All Merchants", "/merchants"%>
+        <%= link_to "All Items", "/items"%>
       <% if current_user.role == 0 %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-        <%= link_to "Profile", "/profile" %>
-        <%= link_to "Logout", "/logout" %>
-        <p>Logged in as: <%= current_user.name %></p>
+        <%= link_to "Register", "/register" %>
+        <%= link_to "Log-In", "/login" %>
       <% elsif current_user.role == 1 %>
-      <%= link_to "Merchant Dashboard", "/merchant" %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <%= link_to "Profile", "/profile" %>
         <%= link_to "Logout", "/logout" %>
         <p>Logged in as: <%= current_user.name %></p>
       <% elsif current_user.role == 2 %>
+        <%= link_to "Merchant Dashboard", "/merchant" %>
+        <%= link_to "Cart: #{cart.total_items}", "/cart" %>
+        <%= link_to "Profile", "/profile" %>
+        <%= link_to "Logout", "/logout" %>
+        <p>Logged in as: <%= current_user.name %></p>
+      <% elsif current_user.role == 3 %>
         <%= link_to "Admin Dashboard", "/admin" %>
         <%= link_to "All Users", "/admin/users" %>
         <%= link_to "Profile", "/profile" %>
         <%= link_to "Logout", "/logout" %>
         <p>Logged in as: <%= current_user.name %></p>
-      <% else %>
-        <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-        <%= link_to "Register", "/register" %>
-        <%= link_to "Log-In", "/login" %>
       <% end %>
     </nav>
     <%= yield %>
