--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,13 @@
         <%= link_to "Logout", "/logout" %>
         <p>Logged in as: <%= current_user.name %></p>
       <% elsif current_user.role == 2 %>
-        <%= link_to "Merchant Dashboard", "/merchant" %>
+        <%= link_to "Merchant Dashboard", "/merchant/dashboard" %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <%= link_to "Profile", "/profile" %>
         <%= link_to "Logout", "/logout" %>
         <p>Logged in as: <%= current_user.name %></p>
       <% elsif current_user.role == 3 %>
-        <%= link_to "Admin Dashboard", "/admin" %>
+        <%= link_to "Admin Dashboard", "/admin/dashboard" %>
         <%= link_to "All Users", "/admin/users" %>
         <%= link_to "Profile", "/profile" %>
         <%= link_to "Logout", "/logout" %>
