created a test to check if you can edit your password

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,3 +6,4 @@
   <p>Zipcode: <%=current_user.zip %></p>
   <p>Email: <%=current_user.email %></p>
 </section>
+<ul><%= link_to "Change password", "/profile/edit_password" %></ul>
