--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -2,8 +2,8 @@
   <%= label_tag :password %>
   <%= text_field_tag :password%>
 
-  <%= label_tag :confirm_password %>
-  <%= text_field_tag :confirm_password %>
+  <%= label_tag :confirmation %>
+  <%= text_field_tag :confirmation %>
 
   <%= submit_tag 'Submit' %>
 <% end %>
