Update MVC for incrementing items in cart

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -30,7 +30,11 @@
       </td>
       <td>
         <center>
-          <p><%=quantity%></p>
+          <p>
+            <%= link_to "-1", cart_update_path(item.id, quantity: "dec"), method: :patch %>
+            <%= quantity %>
+            <%= link_to "+1", cart_update_path(item.id, quantity: "inc"), method: :patch %>
+          </p>
           <p><%= link_to "Remove", "/cart/#{item.id}",method: :delete %></p>
         </center>
         </td>
