--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,6 @@
   <p>State: <%=current_user.state %></p>
   <p>Zipcode: <%=current_user.zip %></p>
   <p>Email: <%=current_user.email %></p>
+  <ul><%= link_to "Update Information", "/profile/edit" %></ul>
+  <ul><%= link_to "Change password", "/profile/edit_password" %></ul>
 </section>
-<%= link_to "Update Information", "/profile/edit" %>
-<ul><%= link_to "Change password", "/profile/edit_password" %></ul>
-
