--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/profile", method: :put do %>
+<%= form_tag "/profile", method: :patch do %>
 
   <%= label_tag :name %>
   <%= text_field_tag :name, current_user.name %>
