--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -46,7 +46,12 @@
 </table>
   <p>Total: <%= number_to_currency(cart.total) %></p>
   <p><%= link_to "Empty Cart", "/cart", method: :delete %></p>
-  <p><%= link_to "Checkout", "/orders/new", method: :get %></p>
+  <% if current_user.role == 0%>
+    <p> You need to login or register in order to checkout. </p>
+  <% else %>
+    <p><%= link_to "Checkout", "/orders/new", method: :get %></p>
+  <% end %>
+
 <% else %>
   <h3 align= "center">Cart is currently empty</h3>
 <% end %>
