--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,15 @@
  	font-family: "Marker Felt", fantasy;
  }
 
+ .topnav p {
+   float: right;
+   color: #f2f2f2;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
+   font-size: 17px;
+ }
+
 ul{
   padding: 0px;
   text-align: center;
