--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,6 +81,10 @@ section[id*='review'] {
    background-color: #002244;
  }
 
+ .topnav-right {
+   float:right
+ }
+
  .topnav a {
    float: left;
    color: #f2f2f2;
