--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <body>
-    <nav class = "topnav">
+    <nav class="nav topnav">
         <%= link_to "Home", "/" %>
         <%= link_to "All Merchants", "/merchants"%>
         <%= link_to "All Items", "/items"%>
@@ -26,20 +26,26 @@
       <% elsif current_user.role == 1 %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <%= link_to "Profile", "/profile" %>
-        <%= link_to "Logout", "/logout" %>
-        <p>Logged in as: <%= current_user.name %></p>
+        <section class="topnav-right">
+          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
+          <%= link_to "Logout", "/logout" %>
+        </section>
       <% elsif current_user.role == 2 %>
         <%= link_to "Merchant Dashboard", "/merchant/dashboard" %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <%= link_to "Profile", "/profile" %>
-        <%= link_to "Logout", "/logout" %>
-        <p>Logged in as: <%= current_user.name %></p>
+        <section class="topnav-right">
+          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
+          <%= link_to "Logout", "/logout" %>
+        </section>
       <% elsif current_user.role == 3 %>
         <%= link_to "Admin Dashboard", "/admin/dashboard" %>
         <%= link_to "All Users", "/admin/users" %>
         <%= link_to "Profile", "/profile" %>
-        <%= link_to "Logout", "/logout" %>
-        <p>Logged in as: <%= current_user.name %></p>
+        <section class="topnav-right">
+          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
+          <%= link_to "Logout", "/logout" %>
+        </section>
       <% end %>
     </nav>
     <%= yield %>
