--- a/app/views/user_orders/index.html.erb
+++ b/app/views/user_orders/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Profile Orders</h1>
 
 <section class="orders-index">
-  <% @user.orders.each do |order| %>
+  <% current_user.orders.each do |order| %>
     <p><%= link_to "#{order.id}", "/orders/#{order.id}" %></p>
     <p><%= order.name %></p>
     <p><%= order.address %></p>
