--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,6 +7,7 @@
       <th>City</th>
       <th>State</th>
       <th>Zip</th>
+      <th>Status</th>
     </tr>
     <tr>
       <td><p><%= @order.name %> </p></td>
@@ -14,6 +15,7 @@
       <td><p><%= @order.city %> </p></td>
       <td><p><%= @order.state %> </p></td>
       <td><p><%= @order.zip %> </p></td>
+      <td><p><%= @order.status %> </p></td>
     </tr>
   </table>
 </section>
@@ -27,6 +29,7 @@
       <th>Price</th>
       <th>Quantity</th>
       <th>Subtotal</th>
+      <th>Status</th>
     </tr>
   <% @order.item_orders.each do |item_order|%>
     <tr>
@@ -36,6 +39,7 @@
         <td><p><%= number_to_currency(item_order.price)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
         <td><p><%= number_to_currency(item_order.subtotal)%></p></td>
+        <td><p><%= item_order.status %></p></td>
       </section>
     </tr>
   <% end %>
@@ -47,3 +51,4 @@
 <section id="datecreated">
   <p> <%= @order.created_at%></p>
 </section>
+<%= link_to "Cancel Order", "/profile/orders/#{@order.id}/cancel", method: :patch %>
