--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -2,29 +2,29 @@
 <h3> Orders </h3>
 <article id="Packaged">
   <% Order.where("status = 'Packaged'").each do |order| %>
-    <p><%= order.find_user %></p>
-    <p><%= order.id %></p>
-    <p><%= order.created_at %></p>
+    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
+    <p>Order ID: <%= order.id %></p>
+    <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
 <article id="Pending">
   <% Order.where("status = 'Pending'").each do |order| %>
-    <p><%= order.find_user %></p>
-    <p><%= order.id %></p>
-    <p><%= order.created_at %></p>
+    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
+    <p>Order ID: <%= order.id %></p>
+    <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
 <article id="Shipped">
   <% Order.where("status = 'Shipped'").each do |order| %>
-    <p><%= order.find_user %></p>
-    <p><%= order.id %></p>
-    <p><%= order.created_at %></p>
+    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
+    <p>Order ID: <%= order.id %></p>
+    <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
 <article id="Cancelled">
   <% Order.where("status = 'Cancelled'").each do |order| %>
-    <p><%= order.find_user %></p>
-    <p><%= order.id %></p>
-    <p><%= order.created_at %></p>
+    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
+    <p>Order ID: <%= order.id %></p>
+    <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
