added an update method to dashboard to update order

--- a/app/views/admin/dashboard/user.html.erb
+++ b/app/views/admin/dashboard/user.html.erb
@@ -2,10 +2,10 @@
 
 <section id="profile" class="grid-item">
   <h2>User Info</h2>
-  Username: <%=current_user.name %><br>
-  Address: <%=current_user.address %>,
-  <%=current_user.city %>,
-  <%=current_user.state %>
-  <%=current_user.zip %><br>
-  Email: <%=current_user.email %><br>
+  Username: <%=@user.name %><br>
+  Address: <%=@user.address %>,
+  <%=@user.city %>,
+  <%=@user.state %>
+  <%=@user.zip %><br>
+  Email: <%=@user.email %><br>
 </section><br>
