--- a/app/views/user_orders/show.html.erb
+++ b/app/views/user_orders/show.html.erb
@@ -51,6 +51,7 @@
 </section>
 <section id="order-id">
   <p>Order ID: <%= @order.id %></p>
+  <p>Order Status: <%= @order.status %></p>
 </section>
 <section id="timestamps">
   <p><%= @order.created_at%></p>
