add the correct way to get to admin dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <%= link_to "Logout", "/logout" %>
         </section>
       <% elsif current_user.role == 3 %>
-        <%= link_to "Admin Dashboard", "/admin/dashboard" %>
+        <%= link_to "Admin Dashboard", "/admin" %>
         <%= link_to "All Users", "/admin/users" %>
         <%= link_to "Profile", "/profile" %>
         <section class="topnav-right">
