--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,5 +1,6 @@
 <h1> Welcome Admin </h1>
 <h3> Orders </h3>
+<h4> Packaged </h4>
 <article id="Packaged">
   <% Order.where("status = 'Packaged'").each do |order| %>
     <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
@@ -8,6 +9,7 @@
     <ul><%= link_to "Ship", "/admin/#{order.id}", method: :patch%>
   <% end %>
 </article>
+<h4> Pending </h4>
 <article id="Pending">
   <% Order.where("status = 'Pending'").each do |order| %>
     <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
@@ -15,6 +17,7 @@
     <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
+<h4> Shipped </h4>
 <article id="Shipped">
   <% Order.where("status = 'Shipped'").each do |order| %>
     <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
@@ -22,6 +25,7 @@
     <p>Created at: <%= order.created_at %></p>
   <% end %>
 </article>
+<h4> Cancelled </h4>
 <article id="Cancelled">
   <% Order.where("status = 'Cancelled'").each do |order| %>
     <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
