--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -1,5 +1,6 @@
 <h2><%= @merchant.name %>'s Items</h2>
 
+<%= link_to "Add Item", "/merchant/items/add-item" %><br><br>
 <section class="items-list grid-container">
   <% @merchant.items.each do |item| %>
     <section id="item-<%= item.id %>" class="grid-item">
