--- a/app/views/admin/dashboard/merchants.html.erb
+++ b/app/views/admin/dashboard/merchants.html.erb
@@ -1,7 +1,7 @@
 <h1>Admin's merchants index </h1>
 <% @merchants.each do |merchant| %>
 <article id="merchant-<%= merchant.id%>">
-  <h2><%=link_to merchant.name, "/admin/#{merchant.id}"%></h2>
+  <h2><%=link_to merchant.name, "/admin/merchants/#{merchant.id}"%></h2>
   <p><%=merchant.address%></p>
   <p><%=merchant.city%></p>
   <p><%=merchant.state%></p>
