Completes Story 34 with test

--- a/app/views/merchant/dashboard/show.html.erb
+++ b/app/views/merchant/dashboard/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Welcome</h1>
+<section class='merchant-info'>
+<h3><%= @merchant.name %></h3>
+<p><%= @merchant.address %></p>
+<p><%= @merchant.city %></p>
+<p><%= @merchant.state %></p>
+<p><%= @merchant.zip %></p>
+</section>
