You can now reverse the disabled merchant as an admin

--- a/app/views/admin/dashboard/merchants.html.erb
+++ b/app/views/admin/dashboard/merchants.html.erb
@@ -6,6 +6,10 @@
   <p><%=merchant.city%></p>
   <p><%=merchant.state%></p>
   <p><%=merchant.zip%></p>
-  <ul><%= link_to "Disable", "/admin/merchants/#{merchant.id}", method: :patch%>
-</article>
+  <% if merchant.status == true %>
+    <ul><%= link_to "Disable", "/admin/merchants/#{merchant.id}", method: :patch%>
+  <% else %>
+    <ul><%= link_to "Enable", "/admin/merchants/#{merchant.id}", method: :patch%>
+  <% end %>
+  </article>
 <%end%>
