--- a/app/views/merchant/dashboard/show.html.erb
+++ b/app/views/merchant/dashboard/show.html.erb
@@ -6,3 +6,13 @@
 <p><%= @merchant.state %></p>
 <p><%= @merchant.zip %></p>
 </section>
+<section class='merchant-orders'>
+  <% @merchant.orders.distinct.each do |order| %>
+    <section id='order-<%= order.id %>'>
+      <p>Order ID: <%= order.id %></p>
+      <p>Created: <%= order.created_at %></p>
+      <p>Merchant Items Quantity: <%= order.merchant_total_items(@merchant) %></p>
+      <p>Merchant Items Cost: <%= number_to_currency(order.merchant_total_cost(@merchant)) %></p>
+    </section>
+  <% end %>
+</section>
