--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
         <%= link_to "Merchant Dashboard", "/merchant/dashboard" %>
         <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <%= link_to "Profile", "/profile" %>
+        <%= link_to "Merchant Items", '/merchant/items' %>
         <section class="topnav-right">
           <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
           <%= link_to "Logout", "/logout" %>
