Update user.role to use enum values; visitor/basic/merchant/admin

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -46,7 +46,7 @@
 </table>
   <p>Total: <%= number_to_currency(cart.total) %></p>
   <p><%= link_to "Empty Cart", "/cart", method: :delete %></p>
-  <% if current_user.role == 0%>
+  <% if current_user.visitor?%>
     <article id="check_visitor">
       <p> You need to <%=link_to "login", "/login", method: :get %>
         or <%=link_to "register", "/register", method: :get %>  in order to checkout. </p>
