created an update to item_orders that allows the user to fulfil them

--- a/app/views/merchant/orders/show.html.erb
+++ b/app/views/merchant/orders/show.html.erb
@@ -1,8 +1,13 @@
 <% @order.current_merchant_items(current_user.merchant_id).each do |item| %>
+<<article id="item-<%= item.id %>">
   <%= item.name %>
+  <%= item.inventory %>
   <% if item.can_be_fulfilled(@order.amount_wanted(item.id)) == true %>
     <ul><%= link_to "Fulfil", "/merchant/#{@order.id}/#{item.id}", method: :patch%>
   <% else %>
     <p> Item does not have enought stock to fulfil order </p>
   <% end %>
+
+</article>
+
 <% end %>
