--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -3,7 +3,7 @@
 <section class = "grid-container">
   <% @merchants.each do |merchant|%>
     <section class = "grid-item">
-      <% if current_user.role = 3 %>
+      <% if current_user.role == 3 %>
         <h2><%=link_to merchant.name, "admin/merchants/#{merchant.id}"%></h2>
       <% else %>
         <h2><%=link_to merchant.name, "/merchants/#{merchant.id}"%></h2>
