--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,37 +17,32 @@
   <body>
     <nav class="nav topnav">
         <%= link_to "Home", "/" %>
-        <%= link_to "All Merchants", "/merchants"%>
         <%= link_to "All Items", "/items"%>
-      <% if current_user.visitor? %>
-        <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-        <%= link_to "Register", "/register" %>
-        <%= link_to "Log-In", "/login" %>
-      <% elsif current_user.basic? %>
-        <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-        <%= link_to "Profile", "/profile" %>
-        <section class="topnav-right">
-          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
-          <%= link_to "Logout", "/logout" %>
-        </section>
-      <% elsif current_user.merchant? %>
-        <%= link_to "Merchant Dashboard", "/merchant" %>
-        <%= link_to "Cart: #{cart.total_items}", "/cart" %>
-        <%= link_to "Profile", "/profile" %>
-        <%= link_to "Merchant Items", '/merchant/items' %>
-        <section class="topnav-right">
-          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
-          <%= link_to "Logout", "/logout" %>
-        </section>
-      <% elsif current_user.admin? %>
-        <%= link_to "Admin Dashboard", "/admin" %>
-        <%= link_to "All Users", "/admin/users" %>
-        <%= link_to "Profile", "/profile" %>
-        <section class="topnav-right">
-          <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
-          <%= link_to "Logout", "/logout" %>
-        </section>
-      <% end %>
+        <%= link_to "All Merchants", "/merchants" %>
+        <% if current_user.visitor? %>
+          <%= link_to "Cart: #{cart.total_items}", "/cart" %>
+          <section class="topnav-right">
+            <%= link_to "Register", "/register" %>
+            <%= link_to "Log-In", "/login" %>
+          </section>
+        <% else !current_user.visitor? %>
+          <section class="topnav-right">
+            <%= link_to "Profile", "/profile" %>
+            <%= link_to "Logged in as: #{current_user.name}", "/profile" %>
+            <%= link_to "Logout", "/logout" %>
+          </section>
+            <% if current_user.admin? %>
+              <%= link_to "Admin All Users", "/admin/users" %>
+              <%= link_to "Admin All Merchants", "/admin/merchants"%>
+              <%= link_to "Admin Dashboard", "/admin" %>
+            <% elsif current_user.merchant? %>
+              <%= link_to "Merchant Items", '/merchant/items' %>
+              <%= link_to "Merchant Dashboard", "/merchant" %>
+              <%= link_to "Cart: #{cart.total_items}", "/cart" %>
+            <% else %>
+              <%= link_to "Cart: #{cart.total_items}", "/cart" %>
+            <% end  %>
+        <% end  %>
     </nav>
     <%= yield %>
   </body>
