--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -1,6 +1,6 @@
-<h2><%= @merchant.name %>'s Items</h2>
+<h1><%= @merchant.name %>'s Items</h1>
 
-<%= link_to "Add Item", "/merchant/items/add-item" %><br><br>
+<center><%= link_to "Add Item", "/merchant/items/add-item" %></center><br><br>
 <section class="items-list grid-container">
   <% @merchant.items.each do |item| %>
     <section id="item-<%= item.id %>" class="grid-item">
@@ -10,12 +10,12 @@
       <%= image_tag(item.image) %>
       <li>Active?: <%= item.status %></li>
       <li>Inventory: <%= item.inventory %></li>
-      <%= link_to "Edit Item", "/merchant/items/#{item.id}/edit", method: :get %>
+      <%= link_to "Edit Item", "/merchant/items/#{item.id}/edit", method: :get %><br>
       <% if item.status == true %>
         <%= link_to "Deactivate Item", "/merchant/items/#{item.id}", method: :put %>
       <% else %>
         <%= link_to "Activate Item", "/merchant/items/#{item.id}", method: :put %>
-      <% end  %>
+      <% end  %><br>
 
       <% if item.no_orders? %>
         <%= link_to "Delete Item", "/merchant/items/#{item.id}", method: :delete %>
@@ -23,3 +23,4 @@
     </section>
   <% end  %>
 </section>
+<center><br><%= link_to "Go Back", request.referer %></center>
