--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,18 @@
  	font-family: "Marker Felt", fantasy;
  }
 
+ h2 {
+  font-size: 30px;
+  color: #002244;
+  font-family: "Marker Felt", fantasy;
+  text-decoration: underline;
+ }
+
+ h3 {
+   text-decoration: underline;
+   color: #002244;
+ }
+
  .topnav p {
    float: right;
    color: #f2f2f2;
@@ -122,6 +134,16 @@ section[id*='review'] {
   box-sizing: border-box;
 }
 
+input[type=password], select {
+ width: 100%;
+ padding: 12px 20px;
+ margin: 8px 0;
+ display: inline-block;
+ border: 1px solid #ccc;
+ border-radius: 4px;
+ box-sizing: border-box;
+}
+
 input[type=submit] {
   width: 100%;
   background-color: #17BEBB;
@@ -148,6 +170,7 @@ form {
   background-color: red;
   color: white;
 }
+
 .success-flash {
   padding: 10px;
   background-color: green;
