--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,35 +1,35 @@
 <h1> Welcome Admin </h1>
-<h3> Orders </h3>
-<h4> Packaged </h4>
+<h2> Orders </h2>
+<h3> Packaged </h3>
 <article id="Packaged">
   <% Order.where("status = 'Packaged'").each do |order| %>
-    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
-    <p>Order ID: <%= order.id %></p>
-    <p>Created at: <%= order.created_at %></p>
-    <ul><%= link_to "Ship", "/admin/#{order.id}", method: :patch%>
+    Recipient: <%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %><br>
+    Order ID: <%= order.id %><br>
+    Created at: <%= order.created_at %><br>
+    <%= link_to "Ship", "/admin/#{order.id}", method: :patch%>
   <% end %>
 </article>
-<h4> Pending </h4>
+<h3> Pending </h3>
 <article id="Pending">
   <% Order.where("status = 'Pending'").each do |order| %>
-    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
-    <p>Order ID: <%= order.id %></p>
-    <p>Created at: <%= order.created_at %></p>
+    Recipient: <%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %><br>
+    Order ID: <%= order.id %><br>
+    Created at: <%= order.created_at %>
   <% end %>
 </article>
-<h4> Shipped </h4>
+<h3> Shipped </h3>
 <article id="Shipped">
   <% Order.where("status = 'Shipped'").each do |order| %>
-    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
-    <p>Order ID: <%= order.id %></p>
-    <p>Created at: <%= order.created_at %></p>
+    Recipient: <%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %><br>
+    Order ID: <%= order.id %><br>
+    Created at: <%= order.created_at %>
   <% end %>
 </article>
-<h4> Cancelled </h4>
+<h3> Cancelled </h3>
 <article id="Cancelled">
   <% Order.where("status = 'Cancelled'").each do |order| %>
-    <ul><%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %></ul>
-    <p>Order ID: <%= order.id %></p>
-    <p>Created at: <%= order.created_at %></p>
+    Recipient: <%= link_to "#{order.find_user}", "/admin/users/#{order.user_id}" %><br>
+    Order ID: <%= order.id %><br>
+    Created at: <%= order.created_at %>
   <% end %>
 </article>
