--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -59,4 +59,5 @@
   <h3 align= "center">Cart is currently empty</h3>
 <% end %>
 <table>
+  <center><%= link_to "Go Back", request.referer %>
 </center>
