--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,15 +23,15 @@
 </section>
 <section class="statistics">
   <section id="most-popular">
-    <h4>Most Popular Items</h4>
+    <h2>Most Popular Items</h2>
     <% Item.most_popular.each do |item| %>
-      <p><%= item.name %>: <%= item.total_quantity %></p>
+      <li type="1"><%= link_to item.name, "/items/#{item.id}" %>: <%= item.total_quantity %> Ordered</li>
     <% end %>
   </section>
   <section id="least-popular">
-    <h4>Least Popular Items</h4>
+    <h2>Least Popular Items</h2>
     <% Item.least_popular.each do |item| %>
-      <p><%= item.name %>: <%= item.total_quantity %></p>
+      <li type="1"><%= link_to item.name, "/items/#{item.id}" %>: <%= item.total_quantity %> Ordered</li>
     <% end %>
   </section>
 </section>
