--- a/app/views/merchant/dashboard/show.html.erb
+++ b/app/views/merchant/dashboard/show.html.erb
@@ -1,15 +1,18 @@
 <h1>Merchant Dashboard</h1>
-<section class='merchant-info'>
-<h2><%= @merchant.name %></h2>
-<%= @merchant.address %>,
-<%= @merchant.city %>,
-<%= @merchant.state %>
-<%= @merchant.zip %><br><br>
-</section>
+<center>
+  <section class='merchant-info'>
+  <h2><%= @merchant.name %></h2>
+  <%= @merchant.address %>,
+  <%= @merchant.city %>,
+  <%= @merchant.state %>
+  <%= @merchant.zip %><br><br>
+  </section>
+</center>
 <section class='merchant-orders grid-container'>
   <% @merchant.orders.distinct.each do |order| %>
     <section id='order-<%= order.id %>' class="grid-item">
       <ul>Order ID: <%= link_to order.id, "/merchant/orders/#{order.id}" %></ul>
+      <ul>Order Status: <%= order.status %></ul>
       <ul>Created: <%= order.created_at %></ul>
       <ul>Merchant Items Quantity: <%= order.merchant_total_items(@merchant) %></ul>
       <ul>Merchant Items Cost: <%= number_to_currency(order.merchant_total_cost(@merchant)) %></ul>
