--- a/app/views/merchant/items/edit.html.erb
+++ b/app/views/merchant/items/edit.html.erb
@@ -1,20 +1,22 @@
 <h1>Update Item Info</h1>
+<center>
+  <%= form_tag "/merchant/items/#{@item.id}", id:"item-#{@item.id}", method: :patch  do %>
+    <%= label_tag :name %>
+    <%= text_field_tag :name, "#{@item.name}"%>
 
-<%= form_tag "/merchant/items/#{@item.id}", id:"item-#{@item.id}", method: :patch  do %>
-  <%= label_tag :name %>
-  <%= text_field_tag :name, "#{@item.name}"%>
+    <%= label_tag :description %>
+    <%= text_field_tag :description, "#{@item.description}" %>
 
-  <%= label_tag :description %>
-  <%= text_field_tag :description, "#{@item.description}" %>
+    <%= label_tag :price %>
+    <%= text_field_tag :price, "#{@item.price}" %>
 
-  <%= label_tag :price %>
-  <%= text_field_tag :price, "#{@item.price}" %>
+    <%= label_tag :inventory %>
+    <%= text_field_tag :inventory, "#{@item.inventory}" %>
 
-  <%= label_tag :inventory %>
-  <%= text_field_tag :inventory, "#{@item.inventory}" %>
+    <%= label_tag :image %>
+    <%= text_field_tag :image, "#{@item.image}" %>
 
-  <%= label_tag :image %>
-  <%= text_field_tag :image, "#{@item.image}" %>
-
-  <%= submit_tag 'Submit' %>
-<% end %>
+    <%= submit_tag 'Submit' %>
+  <% end %>
+  <br><%= link_to "Go Back", request.referer %>
+</center>
