--- a/app/views/merchants/new.html.erb
+++ b/app/views/merchants/new.html.erb
@@ -19,4 +19,5 @@
 
     <%= submit_tag 'Create Merchant' %>
   <% end %>
-</center>
+    <br><%= link_to "Go Back", request.referer %></center>
+<center>
