--- a/app/views/register/_form.html.erb
+++ b/app/views/register/_form.html.erb
@@ -1,28 +1,31 @@
-<%= form_tag path, method: method do %>
+<center>
+  <%= form_tag path, method: method do %>
 
-  <%= label_tag :name %>
-  <%= text_field_tag :name, user[:name] %>
+    <%= label_tag :name %>
+    <%= text_field_tag :name, user[:name] %>
 
-  <%= label_tag :address %>
-  <%= text_field_tag :address, user[:address] %>
+    <%= label_tag :address %>
+    <%= text_field_tag :address, user[:address] %>
 
-  <%= label_tag :city %>
-  <%= text_field_tag :city, user[:city] %>
+    <%= label_tag :city %>
+    <%= text_field_tag :city, user[:city] %>
 
-  <%= label_tag :state %>
-  <%= text_field_tag :state, user[:state] %>
+    <%= label_tag :state %>
+    <%= text_field_tag :state, user[:state] %>
 
-  <%= label_tag :zip %>
-  <%= text_field_tag :zip, user[:zip]%>
+    <%= label_tag :zip %>
+    <%= text_field_tag :zip, user[:zip]%>
 
-  <%= label_tag :email %>
-  <%= text_field_tag :email %>
+    <%= label_tag :email %>
+    <%= text_field_tag :email %>
 
-  <%= label_tag :password %>
-  <%= text_field_tag :password %>
+    <%= label_tag :password %>
+    <%= password_field_tag :password %>
 
-  <%= label_tag :confirm_pass %>
-  <%= text_field_tag :confirm_pass %>
+    <%= label_tag :confirm_pass %>
+    <%= password_field_tag :confirm_pass %>
 
-  <%= submit_tag button_name %>
-<% end %>
+    <%= submit_tag button_name %>
+  <% end %>
+  <br><%= link_to "Go Back", request.referer %>
+</center>
