--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -1,9 +1,13 @@
+<h1>Update Password</h1>
+
 <%= form_tag "/profile/edit_password", method: :patch do %>
   <%= label_tag :password %>
-  <%= text_field_tag :password%>
+  <%= password_field_tag :password%>
 
   <%= label_tag :confirmation %>
-  <%= text_field_tag :confirmation %>
+  <%= password_field_tag :confirmation %>
 
   <%= submit_tag 'Submit' %>
 <% end %>
+
+<br><%= link_to "Go Back", request.referer %>
