--- a/app/views/admin/merchants/show.html.erb
+++ b/app/views/admin/merchants/show.html.erb
@@ -1,15 +1,15 @@
-<h1><%= link_to @merchant.name, "/merchants/#{@merchant.id}" %></h1>
+<h1><%= link_to @merchant.name, "admin/merchants/#{@merchant.id}" %></h1>
 <p class="address"><%= @merchant.address %></p>
 <p class="address"><%= @merchant.city %>, <%= @merchant.state %> <%= @merchant.zip %></p>
 
-<ul><%= link_to "All #{@merchant.name} Items", "/merchants/#{@merchant.id}/items" %></ul>
-<ul><%= link_to "Update Merchant", "/merchants/#{@merchant.id}/edit" %></ul>
-<ul><%= link_to "Delete Merchant", "/merchants/#{@merchant.id}", method: :delete  if @merchant.no_orders?%>
+<ul><%= link_to "All #{@merchant.name} Items", "/admin/merchants/#{@merchant.id}/items" %></ul>
+<ul><%= link_to "Update Merchant", "/admin/merchants/#{@merchant.id}/edit" %></ul>
+<ul><%= link_to "Delete Merchant", "/admin/merchants/#{@merchant.id}", method: :delete  if @merchant.no_orders?%>
 </ul>
 <section class = "merchant-stats">
   <h3>Number of Items: <%=@merchant.item_count%></h3>
   <% if @merchant.item_count > 0 %>
-    <h3>Average Price of Items: <%=number_to_currency( @merchant.average_item_price)%></h3>
+    <h3>Average Price of Items: <%= number_to_currency( @merchant.average_item_price) %></h3>
     <section class = "distinct-cities">
       <h3>Cities that order these items:</h3>
       <% @merchant.distinct_cities.each do |city| %>
