--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -4,4 +4,4 @@
 <%= render partial: 'form', locals: { path: merchant_items_path,
                                       method: :post,
                                       button_name: "Add Item",
-                                      item: Item.new() } %>
+                                      item: @item ||= @merchant.items.new() } %>
