--- a/app/views/admin/merchant_orders/show.html.erb
+++ b/app/views/admin/merchant_orders/show.html.erb
@@ -12,7 +12,7 @@
         <% if item_order.item.can_be_fulfilled(@order.amount_wanted(item_order.item.id)) == false %>
           <ul> Item does not have enough in stock to fulfill order. </ul>
         <% elsif item_order.item.can_be_fulfilled(@order.amount_wanted(item_order.item.id)) == true && item_order.status == "Unfulfilled" %>
-          <ul><%= link_to "Fulfill", "/admin/merchants/#{@merchant.id}/orders/#{@order.id}/#{item_order.item.id}", method: :patch%>
+          <ul><%= link_to "Fulfill", "/admin/merchants/#{@merchant.id}/merchant_orders/#{@order.id}/#{item_order.item.id}", method: :patch%>
         <% else %>
           <p> This item has already been fulfilled. </p>
         <% end %>
